[package]
name = "ufile-rus3"
version = "0.1.9"
edition = "2024"
exclude = ["*.zip", "*.txt", "*.dmg", "tests/*"]
description = "UFile Rust SDK"
license = "MIT"
repository = "https://github.com/blinkingso532/ufile-rus3"
authors = ["blinkingso532", "yahpets.andrew@gmail.com"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.41"
derive_builder = "0.20.2"
hmac = "0.12.1"
md5 = "0.8.0"
mediatype = "0.20.0"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "2.0.16"
tracing = "0.1.41"
urlencoding = "2.1.3"
futures-util = { version = "0.3.31", features = ["io"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
tower = "0.5"
tower-http = "0.6.6"
